--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,10 @@
     "brcypt": "^1.0.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.4.3",
+    "dotenv": "^16.4.5",
+    "graphql": "^16.9.0",
+    "@apollo/server": "^4.10.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
