--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.10"
+    "@apollo/client": "^3.11.10",
+    "@apollo/server": "^4.11.2",
+    "apollo": "^2.34.0",
+    "express": "^4.21.1"
   }
 }
