--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.10.4",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^4.0.1",
     "brcypt": "^1.0.1",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^8.4.3",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "graphql": "^16.9.0",
-    "@apollo/server": "^4.10.4"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^8.4.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
