--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "start": "node server/dist/server.js",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"wait-on tcp:3001 && cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
     "render-build": "npm install && npm run build"
@@ -14,12 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^8.2.0"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.11.10",
-    "@apollo/server": "^4.11.2",
-    "apollo": "^2.34.0",
-    "express": "^4.21.1"
+    "concurrently": "^8.2.0",
+    "wait-on": "^7.2.0"
   }
 }
